<resources>
    <string name="app_name">Goodtime Training</string>
    <string name="app_name_minimal">Training</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="session_type_amrap">AMRAP</string>
    <string name="session_type_for_time">FOR TIME</string>
    <string name="session_type_intervals">INTERVALS</string>
    <string name="session_type_hiit">HIIT</string>
    <string name="session_type_rest">REST</string>

    <string-array name="session_types">
        <item>@string/session_type_amrap</item>
        <item>@string/session_type_for_time</item>
        <item>@string/session_type_intervals</item>
        <item>@string/session_type_hiit</item>
        <item>@string/session_type_rest</item>
    </string-array>

    <string name="pref_sound_profile_default">Competition</string>
    <string name="pref_sound_profile_gym">Gym</string>

    <string-array name="pref_sound_profile_entries">
        <item>@string/pref_sound_profile_default</item>
        <item>@string/pref_sound_profile_gym</item>
    </string-array>

    <string name="pref_voice_profile_eric">Eric</string>
    <string name="pref_voice_profile_katie">Katie</string>

    <string-array name="pref_voice_profile_entries">
        <item>@string/pref_voice_profile_katie</item>
        <item>@string/pref_voice_profile_eric</item>
    </string-array>

    <string name="reminder_title">"Workout reminder"</string>
    <string name="reminder_text">"It's time to move!"</string>
    <string name="workout_reminder">Workout reminder</string>
    <string name="favorites">Favorites</string>
    <string name="new_title">New</string>

    <string name="reminder_action" translatable="false">"goodtime.training.reminder_action"</string>

    <string name="statistics_overview">Overview</string>
    <string name="statistics_today">Today</string>
    <string name="statistics_week">Week</string>
    <string name="statistics_this_week">This week</string>
    <string name="statistics_this_month">This month</string>
    <string name="statistics_total">Total</string>

    <string name="statistics_history">History</string>

    <string name="spinner_range_days">Days</string>
    <string name="spinner_range_weeks">Weeks</string>
    <string name="spinner_range_months">Months</string>
    <string name="filter">Filter</string>

</resources>
