<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_amrap"
        android:icon="@drawable/ic_infinity"
        android:title="@string/session_type_amrap" />
    <item
        android:id="@+id/nav_for_time"
        android:icon="@drawable/ic_flash"
        android:title="@string/session_type_for_time" />
    <item
        android:id="@+id/nav_intervals"
        android:icon="@drawable/ic_status_goodtime"
        android:title="@string/session_type_intervals" />
    <item
        android:id="@+id/nav_hiit"
        android:icon="@drawable/ic_fire2"
        android:title="@string/session_type_hiit" />
    <item
        android:id="@+id/nav_custom"
        android:icon="@drawable/ic_science"
        android:title="CUSTOM" />
</menu>