<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_amrap"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/session_type_amrap" />
        <item
            android:id="@+id/nav_for_time"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/session_type_for_time" />
        <item
            android:id="@+id/nav_tabata"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/session_type_hiit" />
        <item
            android:id="@+id/nav_emom"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/session_type_emom" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_menu_send"
            android:title="Log" />
    </group>

</menu>
