<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <RelativeLayout
            style="@style/SectionCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                style="@style/SectionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/statistics_overview"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header"
                android:baselineAligned="false"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_value"
                        style="@style/OverviewTextValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/today_description"
                        style="@style/OverviewTextDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_today" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/week_value"
                        style="@style/OverviewTextValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/week_description"
                        style="style/OverviewTextDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_this_week" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/month_value"
                        style="@style/OverviewTextValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/month_description"
                        style="style/OverviewTextDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_this_month" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/total_value"
                        style="@style/OverviewTextValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/total_description"
                        style="style/OverviewTextDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_total" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <RelativeLayout
            style="@style/SectionCommon"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/header_history"
                style="@style/SectionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/statistics_history"
                tools:ignore="RelativeOverlap" />

            <Spinner
                android:id="@+id/range_type"
                style="@style/SpinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@+id/range_type" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>

